# aws-ssm-config-downloader

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: main.yml
cmd/config-downloader/: BUILD.bazel  main.go  main_test.go
pkg/aws/: BUILD.bazel  aws.go  aws_test.go  ssm.go
tools/: get_workspace_status.sh
